# YOLOX

./: .dockerignore  .env  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile.cuda  Dockerfile.neuron  Dockerfile.xla  Ideas.ipynb  Inference.py  Inference2c.ipynb  Inference_img.py  Inference_img_0529.py  Inference_img_crop.py  Inference_img_crop_0529.py  Inference_same_image.py  Inference_specific_stride.py  Inference_specific_stride_one.py  Inference_video.py  Inference_video_0529.py  LICENSE  MANIFEST.in  Makefile  README.md  README_CN.MD  SECURITY.md  SplitDataByS.py  augmentations.ipynb  azure-pipelines.yml  cache_cn.md  cache_en.md  cog.yaml  convertAnnotation.py  createClassCsv.py  demo.sh  detector.py  docker-cuda.sh  docker-neuron.sh  (+37 more)
.github/: dependabot.yml
.github/workflows/: ci.yaml  format_check.sh
Fusion/: fusion_in_camera.py
Fusion/fusion_in_radar/: filter.py  filter_test.py  fusion.py  fusion_test.py
Fusion/init/: args_init.py  args_save.py
Fusion/radar/: radar.py
Fusion/save/: fusion_save_init.py  save.py
Fusion/utils/: args_save.py  convert.py  convert_test.py  visualize.py
Fusion/yolox/: predictor.py
YOLOX/: LICENSE  setup.py
YOLOX/demo/ONNXRuntime/: README.md
YOLOX/demo/OpenVINO/cpp/: CMakeLists.txt  README.md
YOLOX/tools/: export_onnx.py  trt.py
YOLOX/yolox/: __init__.py
YOLOX/yolox/data/: __init__.py  data_prefetcher.py  dataloading.py  samplers.py
YOLOX/yolox/evaluators/: __init__.py  voc_eval.py  voc_evaluator.py
YOLOX/yolox/exp/: __init__.py  yolox_base.py
YOLOX/yolox/models/: darknet.py  network_blocks.py  yolo_head.py
YOLOX/yolox/utils/: boxes.py  demo_utils.py  dist.py  logger.py
datasets/: README.md
datasets/pedestrian_coco/train/: README.md
datasets/pedestrian_coco/valid/: README.md
datasets/pedestrian_voc/Annotations/: README.md
datasets/pedestrian_voc/JPEGImages/: README.md
demo/MegEngine/cpp/: README.md  build.sh  yolox.cpp
demo/MegEngine/python/: README.md  build.py  convert_weights.py  demo.py  dump.py
demo/ONNXRuntime/: README.md  demo_utils.py  onnx_infer_utils.py  onnx_inference.py
demo/OpenVINO/: README.md
demo/OpenVINO/cpp/: CMakeLists.txt  README.md  yolox_openvino.cpp
demo/OpenVINO/python/: README.md  openvino_inference.py
demo/TensorRT/cpp/: CMakeLists.txt  README.md  logging.h  yolox.cpp
demo/TensorRT/python/: README.md
demo/ncnn/: README.md  onnx2ncnn.sh
demo/ncnn/android/: README.md  build.gradle
demo/ncnn/cpp/: README.md  yolox.cpp
demo/nebullvm/: README.md  nebullvm_optimization.py  nebullvm_optimize.py  nebullvm_run_inference.py
docker/: Dockerfile
docs/: Makefile  assignment_visualization.md  cache.md  cache_cn.md  cache_en.md  conf.py  control_training_image_size.md  freeze_module.md  index.rst  manipulate_training_image_size.md  mlflow_integration.md  model_zoo.md  quick_run.md  requirements-doc.txt  train_custom_data.md  train_yolo_format_data.md  updates_note.md
docs/_static/css/: custom.css
docs/demo/: megengine_cpp_readme.md  megengine_py_readme.md  ncnn_android_readme.md  ncnn_cpp_readme.md  onnx_readme.md  openvino_cpp_readme.md  openvino_py_readme.md  trt_cpp_readme.md  trt_py_readme.md
exps/custom/: nano.py  yolox_s.py
exps/default/: __init__.py  nano.py  nano_leaky.py  yolov3.py  yolox_l.py  yolox_l_leaky.py  yolox_m.py  yolox_m_leaky.py  yolox_nano.py  yolox_s.py  yolox_s_custom.py  yolox_s_leaky.py  yolox_tiny.py  yolox_tiny_leaky.py  yolox_x.py  yolox_x_leaky.py
exps/example/custom/: nano.py  yolox_nano_EE.py  yolox_s.py  yolox_s_val.py
exps/example/yolo_format/: yolox_s.py
exps/example/yolox_3d/: yolox_3d_voc_m.py
exps/example/yolox_voc/: yolox_voc_nano.py  yolox_voc_s.py  yolox_voc_tiny.py
exps/example/yolox_voc_nano/: yolox_voc_nano.py
exps/example/yolox_voc_tiny/: yolox_voc_tiny.py
exps/players/: yolox_s.py
myconfig/: voc_ocr.py  voc_ocr_2022.py  voc_ocr_2023.py  voc_ocr_2024.py  voc_ocr_2025.py  voc_ocr_2025_noflip.py  voc_ocr_2026.py  voc_ocr_2027.py  voc_ocr_2027_noaug30.py  voc_ocr_2028.py  voc_ocr_2028_exp.py  voc_ocr_2029.py
tests/: conftest.py  test_detections.py  test_training.py
tests/models/: losses.py
tests/utils/: test_model_utils.py
tools/: __init__.py  analysePlayersDataSplit.py  aq_stereo.py  client.py  createPlayersDataSplit.py  demo.py  demo_ocr.py  demo_sliding_window.py  download_prod_model.sh  drawPrediction.py  eval.py  export_coreml.py  export_onnx.py  export_ov.py  export_torchscript.py  hub.py  log_mlflow.py  server.py  train.py  train.yaml  trt.py  visualize_assign.py  visualize_augmentation.py  yolox_base.py  yolox_s_persontray.mapping  yolox_s_persontray.xml
utils/: visualize.py
yolox/: __init__.py  config.py
yolox/cli/: __init__.py  demo.py  eval.py  export_onnx.py  export_torchscript.py  train.py  trt.py  utils.py  visualize_assign.py
yolox/core/: __init__.py  launch.py  log_mlflow.py  trainer.py
yolox/data/: __init__.py  data_augment.py  data_prefetcher.py  dataloading.py  samplers.py
yolox/data/datasets/: __init__.py  coco.py  coco_calibrator.py  coco_classes.py  custom.py  custom_classes.py  datasets_wrapper.py  mosaicdetection.py  players.py  players_classes.py  (+3 more)
yolox/evaluators/: __init__.py  coco_evaluator.py  custom_evaluator.py  voc_eval.py  voc_evaluator.py
yolox/evalutors/: __init__.py  coco_evaluator.py  voc_eval.py  voc_evaluator.py
yolox/exp/: __init__.py  base_exp.py  build.py  yolox_base.py  yolox_base_custom.py
yolox/layers/: __init__.py  fast_coco_eval_api.py  jit_ops.py
yolox/models/: __init__.py  build.py  darknet.py  losses.py  network_blocks.py  processor.py  yolo_3dhead.py  yolo_fpn.py  yolo_head.py  yolo_pafpn.py  yolox.py  yolox_custom.py  yolox_torchscript.py
yolox/tools/: __init__.py
yolox/utils/: __init__.py  allreduce_norm.py  boxes.py  checkpoint.py  compat.py  create_json.py  datasets.py  demo_utils.py  device_utils.py  dist.py  ema.py  hub.py  logger.py  lr_scheduler.py  metric.py  mlflow_logger.py  model_utils.py  result_plot.py  setup_env.py  visualize.py  wandb_utils.py
(+45 files in other folders)
